--- a/pertemuan-09/nodeJS/mahasiswa-app/public/edit.html
+++ b/pertemuan-09/nodeJS/mahasiswa-app/public/edit.html
@@ -1,64 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Edit Mahasiswa</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #f4f6f8;
+      background: #e8f5e9;
       font-family: 'Roboto', sans-serif;
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
+      align-items: flex-start;
+      min-height: 100vh;
+      margin: 0;
     }
     .card {
       background: #fff;
       padding: 2rem 2.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-      min-width: 320px;
+      border-radius: 16px;
+      box-shadow: 0 6px 32px rgba(56, 142, 60, 0.10);
+      min-width: 340px;
+      margin-top: 3rem;
     }
     h2 {
       text-align: center;
-      margin-bottom: 1.5rem;
-      color: #2d3a4b;
+      margin-bottom: 2rem;
+      color: #388e3c;
+      letter-spacing: 1px;
     }
     form {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.1rem;
     }
     input {
       padding: 0.7rem 1rem;
-      border: 1px solid #d1d9e6;
-      border-radius: 6px;
+      border: 1px solid #a5d6a7;
+      border-radius: 8px;
       font-size: 1rem;
       transition: border 0.2s;
     }
     input:focus {
-      border-color: #4f8cff;
+      border-color: #43a047;
       outline: none;
     }
     button {
       padding: 0.8rem 1rem;
-      background: #4f8cff;
+      background: linear-gradient(90deg, #43a047 60%, #66bb6a 100%);
       color: #fff;
       border: none;
-      border-radius: 6px;
-      font-size: 1rem;
+      border-radius: 8px;
+      font-size: 1.05rem;
       font-weight: 700;
       cursor: pointer;
+      margin-top: 0.5rem;
       transition: background 0.2s;
     }
     button:hover {
-      background: #2563eb;
+      background: linear-gradient(90deg, #388e3c 60%, #43a047 100%);
+    }
+    .back-link {
+      display: block;
+      margin-bottom: 1.5rem;
+      color: #388e3c;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: color 0.2s;
+    }
+    .back-link:hover {
+      color: #1b5e20;
+      text-decoration: underline;
+    }
+    @media (max-width: 600px) {
+      .card { min-width: 95vw; padding: 1rem; }
+      h2 { font-size: 1.2rem; }
     }
   </style>
 </head>
 <body>
 <div class="card">
+  <a href="index.html" class="back-link">&#8592; Kembali ke Dashboard</a>
   <h2>Edit Mahasiswa</h2>
   <form id="editForm">
     <input type="text" id="npm" placeholder="NPM" required />
@@ -70,20 +92,36 @@
   </form>
 </div>
 <script>
-  // Example: fetch and prefill data if needed
-  // const urlParams = new URLSearchParams(window.location.search);
-  // const id = urlParams.get('id');
-  // fetch(`http://localhost:3000/mahasiswa/${id}`)
-  //   .then(res => res.json())
-  //   .then(data => {
-  //     document.getElementById('npm').value = data.npm;
-  //     document.getElementById('nama').value = data.nama;
-  //     document.getElementById('jurusan').value = data.jurusan;
-  //     document.getElementById('tahunMasuk').value = data.tahunMasuk;
-  //     document.getElementById('kelas').value = data.kelas;
-  //   });
+  const urlParams = new URLSearchParams(window.location.search);
+  const id = urlParams.get('id');
+  const form = document.getElementById('editForm');
 
-  document.getElementById('editForm').addEventListener('submit', async (e) => {
+  // Prefill form with existing data
+  if (id) {
+    fetch(`http://localhost:3000/mahasiswa/${encodeURIComponent(id)}`)
+            .then(res => res.json())
+            .then(data => {
+              if (!data || !data.id) {
+                alert('Data tidak ditemukan.');
+                window.location.href = 'index.html';
+                return;
+              }
+              document.getElementById('npm').value = data.npm || '';
+              document.getElementById('nama').value = data.nama || '';
+              document.getElementById('jurusan').value = data.jurusan || '';
+              document.getElementById('tahunMasuk').value = data.tahunMasuk || '';
+              document.getElementById('kelas').value = data.kelas || '';
+            })
+            .catch(() => {
+              alert('Gagal mengambil data.');
+              window.location.href = 'index.html';
+            });
+  } else {
+    alert('ID tidak ditemukan di URL.');
+    window.location.href = 'index.html';
+  }
+
+  form.addEventListener('submit', async (e) => {
     e.preventDefault();
     const data = {
       npm: document.getElementById('npm').value,
@@ -92,15 +130,14 @@
       tahunMasuk: parseInt(document.getElementById('tahunMasuk').value),
       kelas: document.getElementById('kelas').value
     };
-    // Replace 'id' with the actual ID or get it from URL
-    const id = data.npm;
-    const res = await fetch(`http://localhost:3000/mahasiswa/${id}`, {
+    const res = await fetch(`http://localhost:3000/mahasiswa/${encodeURIComponent(id)}`, {
       method: 'PUT',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
     });
     const result = await res.json();
     alert(result.message || 'Data berhasil diupdate!');
+    window.location.href = 'index.html';
   });
 </script>
 </body>
