--- a/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
+++ b/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
@@ -1,82 +1,121 @@
+<!-- mahasiswa-app/public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Dashboard</title>
+    <title>Dashboard Mahasiswa</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
         body {
-            background: #f4f6f8;
+            background: #e8f5e9;
             font-family: 'Roboto', sans-serif;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
+            align-items: flex-start;
+            min-height: 100vh;
+            margin: 0;
         }
         .card {
             background: #fff;
             padding: 2rem 2.5rem;
-            border-radius: 12px;
-            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
-            min-width: 500px;
+            border-radius: 16px;
+            box-shadow: 0 6px 32px rgba(56, 142, 60, 0.10);
+            min-width: 480px;
+            margin-top: 3rem;
         }
         h2 {
             text-align: center;
-            margin-bottom: 1.5rem;
-            color: #2d3a4b;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 1rem;
-        }
-        th, td {
-            padding: 0.6rem 0.7rem;
-            border-bottom: 1px solid #f0f0f0;
-            text-align: left;
-        }
-        th {
-            color: #4f8cff;
-        }
-        .actions a {
-            margin-right: 0.5rem;
-            color: #2563eb;
-            text-decoration: none;
-            font-weight: 500;
+            margin-bottom: 2rem;
+            color: #388e3c;
+            letter-spacing: 1px;
         }
         .add-btn {
             display: block;
             width: 100%;
-            padding: 0.8rem 1rem;
-            background: #4f8cff;
+            padding: 0.9rem 1rem;
+            background: linear-gradient(90deg, #43a047 60%, #66bb6a 100%);
             color: #fff;
             border: none;
-            border-radius: 6px;
-            font-size: 1rem;
+            border-radius: 8px;
+            font-size: 1.1rem;
             font-weight: 700;
             cursor: pointer;
             text-align: center;
             text-decoration: none;
-            margin-bottom: 1rem;
+            margin-bottom: 1.5rem;
+            box-shadow: 0 2px 8px rgba(67, 160, 71, 0.10);
             transition: background 0.2s;
         }
         .add-btn:hover {
-            background: #2563eb;
+            background: linear-gradient(90deg, #388e3c 60%, #43a047 100%);
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background: #f9fff9;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        th, td {
+            padding: 0.7rem 0.8rem;
+            border-bottom: 1px solid #e0e0e0;
+            text-align: left;
+        }
+        th {
+            background: #a5d6a7;
+            color: #1b5e20;
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+        }
+        tr:last-child td {
+            border-bottom: none;
+        }
+        .actions {
+            display: flex;
+            gap: 0.5rem;
+        }
+        .action-btn {
+            padding: 0.4rem 0.9rem;
+            border: none;
+            border-radius: 6px;
+            font-size: 0.95rem;
+            font-weight: 500;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.2s, color 0.2s;
+        }
+        .detail-btn {
+            background: #c8e6c9;
+            color: #388e3c;
+        }
+        .detail-btn:hover {
+            background: #81c784;
+            color: #fff;
+        }
+        .edit-btn {
+            background: #fffde7;
+            color: #fbc02d;
+        }
+        .edit-btn:hover {
+            background: #ffe082;
+            color: #fff;
+        }
+        @media (max-width: 600px) {
+            .card { min-width: 95vw; padding: 1rem; }
+            th, td { font-size: 0.95rem; }
         }
     </style>
 </head>
 <body>
 <div class="card">
     <h2>Dashboard Mahasiswa</h2>
-    <a href="tambah.html" class="add-btn">Tambah Mahasiswa</a>
+    <button class="add-btn" onclick="window.location.href='tambah.html'">+ Tambah Mahasiswa</button>
     <table id="mahasiswaTable">
         <thead>
         <tr>
             <th>NPM</th>
             <th>Nama</th>
             <th>Jurusan</th>
-            <th>Tahun Masuk</th>
-            <th>Kelas</th>
             <th>Aksi</th>
         </tr>
         </thead>
@@ -95,20 +134,18 @@
             data.forEach(m => {
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
-                    <td>${m.npm}</td>
-                    <td>${m.nama}</td>
-                    <td>${m.jurusan}</td>
-                    <td>${m.tahunMasuk}</td>
-                    <td>${m.kelas}</td>
+                    <td>${m.npm || '-'}</td>
+                    <td>${m.nama || '-'}</td>
+                    <td>${m.jurusan || '-'}</td>
                     <td class="actions">
-                        <a href="detail.html?npm=${m.npm}">Detail</a>
-                        <a href="edit.html?npm=${m.npm}">Edit</a>
+                        <a href="detail.html?id=${encodeURIComponent(m.id)}" class="action-btn detail-btn">Detail</a>
+                        <a href="edit.html?id=${encodeURIComponent(m.id)}" class="action-btn edit-btn">Edit</a>
                     </td>
                 `;
                 tbody.appendChild(tr);
             });
         } else {
-            tbody.innerHTML = '<tr><td colspan="6" style="text-align:center;color:#888;">Tidak ada data.</td></tr>';
+            tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;color:#888;">Tidak ada data.</td></tr>';
         }
     }
     loadMahasiswa();
