--- a/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
+++ b/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
@@ -1,4 +1,3 @@
-<!-- mahasiswa-app/public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -100,6 +99,14 @@
             background: #ffe082;
             color: #fff;
         }
+        .delete-btn {
+            background: #ffebee;
+            color: #c62828;
+        }
+        .delete-btn:hover {
+            background: #ef9a9a;
+            color: #fff;
+        }
         @media (max-width: 600px) {
             .card { min-width: 95vw; padding: 1rem; }
             th, td { font-size: 0.95rem; }
@@ -140,9 +147,25 @@
                     <td class="actions">
                         <a href="detail.html?id=${encodeURIComponent(m.id)}" class="action-btn detail-btn">Detail</a>
                         <a href="edit.html?id=${encodeURIComponent(m.id)}" class="action-btn edit-btn">Edit</a>
+                        <button class="action-btn delete-btn" data-id="${m.id}">Delete</button>
                     </td>
                 `;
                 tbody.appendChild(tr);
+            });
+
+            // Add event listeners for delete buttons
+            document.querySelectorAll('.delete-btn').forEach(btn => {
+                btn.addEventListener('click', async function () {
+                    const id = this.getAttribute('data-id');
+                    if (confirm('Apakah Anda yakin ingin menghapus data mahasiswa ini?')) {
+                        const res = await fetch(`http://localhost:3000/mahasiswa/${encodeURIComponent(id)}`, {
+                            method: 'DELETE'
+                        });
+                        const result = await res.json();
+                        alert(result.message || 'Data berhasil dihapus!');
+                        loadMahasiswa();
+                    }
+                });
             });
         } else {
             tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;color:#888;">Tidak ada data.</td></tr>';
