--- a/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
+++ b/pertemuan-09/nodeJS/mahasiswa-app/public/index.html
@@ -111,9 +111,28 @@
             .card { min-width: 95vw; padding: 1rem; }
             th, td { font-size: 0.95rem; }
         }
+        .logout-btn {
+            position: absolute;
+            top: 1.5rem;
+            right: 2rem;
+            background: #d32f2f;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 0.6rem 1.2rem;
+            font-size: 1rem;
+            font-weight: 700;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(211, 47, 47, 0.10);
+            transition: background 0.2s;
+        }
+        .logout-btn:hover {
+            background: #b71c1c;
+        }
     </style>
 </head>
 <body>
+<button id="logoutBtn" class="logout-btn">Logout</button>
 <div class="card">
     <h2>Dashboard Mahasiswa</h2>
     <button class="add-btn" onclick="window.location.href='tambah.html'">+ Tambah Mahasiswa</button>
@@ -171,6 +190,10 @@
             tbody.innerHTML = '<tr><td colspan="4" style="text-align:center;color:#888;">Tidak ada data.</td></tr>';
         }
     }
+    document.getElementById('logoutBtn').addEventListener('click', function() {
+        localStorage.removeItem('token');
+        window.location.href = 'login.html';
+    });
     loadMahasiswa();
 </script>
 </body>
